--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -101,7 +101,7 @@
   "alertCopy": "Copiar",
   "alertClose": "Cerrar",
   "alertDoNotAsk": "No volver a preguntar",
-  "appBeta": "ADVERTENCIA: Versión beta, sólo para experimentar",
+  "appBeta": "ADVERTENCIA: versión beta, sólo para pruebas",
   "footerOpen": "Abrir / Nueva",
   "footerSyncError": "Fallo al sincronizar",
   "footerTitleGen": "Generar",
@@ -109,9 +109,9 @@
   "genLen": "Longitud",
   "genNewPass": "Nueva contraseña",
   "genPresetDefault": "ajuste predeterminado",
-  "genPresetDerived": "como contraseña previa",
+  "genPresetDerived": "como la contraseña anterior",
   "genPresetPronounceable": "pronunciable",
-  "genPresetMed": "longitud media",
+  "genPresetMed": "longitud mediana",
   "genPresetLong": "larga",
   "genPresetPin4": "PIN de 4 dígitos",
   "genPresetMac": "dirección MAC",
@@ -146,7 +146,7 @@
   "genPsDigits": "Números",
   "genPsSpecial": "Caracteres especiales",
   "genPsBrackets": "Paréntesis",
-  "genPsHigh": "Caracteres ASCII extendido",
+  "genPsHigh": "Caracteres ASCII extendidos",
   "genPsAmbiguous": "Caracteres ambiguos",
   "genPsInclude": "Caracteres adicionales a incluir",
   "genPsExample": "Ejemplo de contraseña generada",
@@ -161,11 +161,11 @@
   "keyChangeRepeatPassword": "Contraseña, una vez más",
   "keyEnter": "Introducir",
   "iconFavTitle": "Descargar y usar el favicon del sitio web",
-  "iconSelCustom": "Seleccionar icono personalizado",
+  "iconSelCustom": "Escoge un icono personalizado",
   "listEmptyTitle": "Vacío",
-  "listEmptyAdd": "Añadir con el botón {} arriba",
+  "listEmptyAdd": "añadir con el botón {} arriba",
   "listGroup": "Grupo",
-  "listNoWebsite": "Sin sitio web",
+  "listNoWebsite": "sin sitio web",
   "listNoUser": "sin usuario",
   "listNoAttachments": "sin adjuntos",
   "listAddTemplateHeader": "Plantillas",
@@ -181,7 +181,7 @@
   "searchON": "Antiguo {} Nuevo",
   "searchNO": "Nuevo {} Antiguo",
   "searchShiftClickOr": "mayús-clic o",
-  "searchAdvTitle": "Abrir búsqueda avanzada",
+  "searchAdvTitle": "Alternar búsqueda básica/avanzada",
   "searchSearchIn": "Buscar en",
   "searchOther": "Otros campos",
   "searchProtect": "Campos seguros",
@@ -202,7 +202,7 @@
   "openKeyFile": "archivo llave",
   "openKeyFileDropbox": "(desde Dropbox)",
   "openDropHere": "Suelta aquí los archivos",
-  "openFailedRead": "Fallo al leer archivo",
+  "openFailedRead": "Fallo al leer el archivo",
   "openNothingFound": "No se encontró nada",
   "openNothingFoundBody": "No se han encontrado archivos compatibles.",
   "openSelectFile": "Selecciona un archivo",
@@ -216,12 +216,12 @@
   "openLocalFileDontShow": "No mostrar otra vez",
   "openWrongFile": "Archivo dañado",
   "openWrongFileBody": "Este formato de archivo no está soportado. Esta aplicación funciona con formatos de base de datos de KeePass (kdbx).",
-  "openKdbFileBody": "Estás abriendo un formato de archivo antiguo (KDB). Esta aplicación sólo soporta el nuevo formado (kdbx), por favor, usa KeePass v2 para actualizar el formato.",
+  "openKdbFileBody": "Estás abriendo un formato de archivo antiguo (KDB). Esta aplicación sólo soporta el nuevo formado (kdbx), por favor, usa KeePass v2 para convertir entre un formato y otro.",
   "openConfigHeader": "Ajustes de {}",
   "openUrl": "URL",
-  "openUrlDesc": "https://servidor/ruta/archivo.kbdx, o sólo archivo.kbdx",
+  "openUrlDesc": "https://servidor/ruta/archivo.kbdx, o solo archivo.kbdx",
   "openUser": "Usuario",
-  "openUserDesc": "Usuario de servidor WebDAV (si necesario)",
+  "openUserDesc": "Usuario de servidor WebDAV (si fuera necesario)",
   "openUserPlaceholder": "sin usuario",
   "openPass": "Contraseña",
   "openPassDesc": "Contraseña de servidor WebDAV (no es la contraseña de tu archivo)",
@@ -308,24 +308,24 @@
   "detAutoTypeInputWindow": "Título de ventana",
   "detSetupOtpAlert": "Escanear código QR",
   "detSetupOtpAlertBody": "Por favor, copia el código QR que se muestra en la página de autorización.",
-  "detSetupOtpAlertBody1": "1. Dirígete a la página de autorización",
-  "detSetupOtpAlertBody2": "2. Haz un pantallazo del código QR con {}",
-  "detSetupOtpAlertBody3": "3. Pégalo aquí con {}",
-  "detSetupOtpAlertBody3Mobile": "3. Selecciónalo o escanéalo con tu cámara usando el botón Seleccionar/Escanear",
+  "detSetupOtpAlertBody1": "1. dirígete a la página de autorización",
+  "detSetupOtpAlertBody2": "2. haz un pantallazo del código QR con {}",
+  "detSetupOtpAlertBody3": "3. pégalo aquí con {}",
+  "detSetupOtpAlertBody3Mobile": "3. selecciónalo o escanéalo con tu cámara usando el botón «Seleccionar/Escanear»",
   "detSetupOtpAlertBody4": "Si no puedes escanearlo, haz clic en «Introducir código manualmente»",
   "detSetupOtpManualButton": "Introducir código manualmente",
   "detSetupOtpScanButton": "Seleccionar/Escanear",
   "detSetupOtpAlertBodyWith": "con {}",
   "detOtpImageError": "Fallo al leer imagen",
-  "detOtpImageErrorBody": "Perdón, no pudimos leer el formato de imagen, por favor, contacta con los autores de la aplicación junto con los detalles del fallo.",
-  "detOtpImageReading": "Leyendo código QR ...",
+  "detOtpImageErrorBody": "Perdón, no pudimos leer el formato de imagen, por favor, contacta con los autores de la aplicación y remíteles los detalles del error.",
+  "detOtpImageReading": "Leyendo código QR...",
   "detOtpQrError": "Fallo al escanear código QR",
-  "detOtpQrErrorBody": "Perdón, no pudimos leer el código QR, por favor, vuelve a intentarlo o contacta a los autores de la aplicación con detalles sobre el fallo.",
+  "detOtpQrErrorBody": "Perdón, no pudimos leer el código QR, por favor, vuelve a intentarlo o contacta a los autores de la aplicación y remíteles los detalles del error.",
   "detOtpQrWrong": "Código QR erróneo",
   "detOtpQrWrongBody": "Se ha escaneado tu código QR pero no contiene información de códigos de un solo uso.",
   "detOtpField": "Código de un solo uso",
   "detOtpClickToTouch": "Clic para generar",
-  "detOtpGenerating": "Generando ...",
+  "detOtpGenerating": "Generando...",
   "detOtpTouch": "Toca tu {}",
   "detLockField": "Bloquea este campo para que su contenido no sea visible ni localizable con una búsqueda. Para mostrar el contenido de este campo tendrás que hacer clic sobre él.",
   "detUnlockField": "Desbloquea este campo para hacer su contenido visible y localizable con una búsqueda.",
@@ -335,7 +335,7 @@
   "autoTypeEntryFields": "Campos de entrada",
   "autoTypeModifiers": "Teclas modificadoras",
   "autoTypeKeys": "Teclas",
-  "autoTypeLink": "más ...",
+  "autoTypeLink": "más...",
   "autoTypeError": "Fallo de autocompletado",
   "autoTypeErrorGeneric": "Se ha producido un fallo al realizar el autocompletado: {}",
   "autoTypeErrorGlobal": "Por favor, abre la aplicación en la que quieres introducir tu contraseña para utilizar un atajo de teclado global",
@@ -345,11 +345,11 @@
   "autoTypeMsgMatchedByWindow": "Seleccionar una contraseña para {}",
   "autoTypeNoMatches": "sin coincidencias",
   "autoTypeSelectionHint": "Escribe la secuencia de autocompletado",
-  "autoTypeSelectionHintAction": "Introduce solamente la contraseña",
-  "autoTypeSelectionHintOpt": "Introduce solamente el usuario",
+  "autoTypeSelectionHintAction": "Introduce solo la contraseña",
+  "autoTypeSelectionHintOpt": "Introduce solo el usuario",
   "autoTypeSelectionHintShift": "Otros campos",
   "autoTypeSelectionOtp": "Código de un solo uso",
-  "appSecWarn": "¡Inseguro!",
+  "appSecWarn": "¡No es seguro!",
   "appSecWarnBody1": "Has cargado esta aplicación mediante una conexión insegura. Alguien podría estar observando tu tráfico y robando tus contraseñas. Te aconsejamos no continuar, a no ser que comprendas perfectamente lo que estás haciendo.",
   "appSecWarnBody2": "Sí, tu base de datos está cifrada, pero nadie te puede garantizar que la aplicación no haya sido modificada antes de llegar a ti.",
   "appSecWarnBtn": "Comprendo los riesgos, continuar",
@@ -364,12 +364,12 @@
   "appSaveErrorBodyMul": "Fallo al guardar automáticamente los archivos:",
   "appSettingsError": "Fallo al cargar la aplicación",
   "appSettingsErrorBody": "Se ha producido un fallo al cargar los ajustes de la aplicación. Por favor, vuelve a comprobar la URL o contacta con tu administrador.",
-  "appNotSupportedError": "Tu navegador no soporta algunas de las características necesarias que utilizamos.",
+  "appNotSupportedError": "Tu navegador no soporta algunas de las características requeridas por esta aplicación.",
   "appTabWarn": "Demasiadas pestañas",
   "appTabWarnBody": "KeeWeb no se puede utilizar en dos pestañas a la vez, por favor, cierra esta pestaña.",
-  "appRightsAlert": "Proteger la aplicación KeeWeb",
-  "appRightsAlertBody1": "Tu aplicación KeeWeb no está protegida todavía contra cambios no autorizados. Te solicitamos modificar el permiso de escritura sólo para administradores.",
-  "appRightsAlertBody2": "¿No quieres dar permisos? Puedes hacerlo tú mismo con el Terminal",
+  "appRightsAlert": "Bloqueando la aplicación KeeWeb",
+  "appRightsAlertBody1": "Tu aplicación KeeWeb no está protegida todavía contra cambios no autorizados. Te solicitamos modificar el permiso de escritura solo para administradores.",
+  "appRightsAlertBody2": "¿No quieres dar permisos? Puedes hacerlo tú mismo en Terminal",
   "appBrowserAuthComplete": "Se ha completado la autenticación, puedes cerrar esta pestaña.",
   "setGenTitle": "Ajustes generales",
   "setGenUpdate": "Actualizar",
@@ -389,8 +389,8 @@
   "setGenCheckedAt": "Comprobado el",
   "setGenLatestVer": "estás usando la última versión",
   "setGenNewVer": "nueva versión {} disponible",
-  "setGenDownloadingUpdate": "Descargando actualización ...",
-  "setGenExtractingUpdate": "Extrayendo actualización ...",
+  "setGenDownloadingUpdate": "Descargando actualización...",
+  "setGenExtractingUpdate": "Extrayendo actualización...",
   "setGenCheckErr": "Se ha producido un fallo al descargar la nueva versión",
   "setGenNeverChecked": "Nunca se han comprobado actualizaciones ",
   "setGenRestartToUpdate": "Reinicia la aplicación para actualizar",
@@ -416,11 +416,11 @@
   "setGenTitlebarStyleHidden": "Título personalizado",
   "setGenTitlebarStyleHiddenInset": "Título personalizado, ventana arrastrable",
   "setGenShowSubgroups": "Mostrar entradas de todos los subgrupos",
-  "setGenTableView": "Mostrar lista de entradas como panel horizontal",
-  "setGenColorfulIcons": "Iconos propios de color en la lista",
-  "setGenUseMarkdown": "Estilo de texto en notas",
+  "setGenTableView": "Mostrar lista de entradas en un panel horizontal",
+  "setGenColorfulIcons": "Iconos personalizados en la lista",
+  "setGenUseMarkdown": "Markdown en notas",
   "setGenUseGroupIconForEntries": "Usar automáticamente el icono de grupo para entradas nuevas",
-  "setGenDirectAutotype": "Si sólo se encuentra una única entrada, se seleccionará automáticamente para el autocompletado.",
+  "setGenDirectAutotype": "Si solo se encuentra una única entrada, se seleccionará automáticamente para el autocompletado.",
   "setGenFunction": "Función",
   "setGenAutoSyncOnClose": "Guardar y sincronizar automáticamente al cerrar",
   "setGenAutoSyncTimer": "Guardar y sincronizar periódicamente de forma automática",
@@ -429,7 +429,7 @@
   "setGenRememberKeyFiles": "Recordar archivos llave",
   "setGenNoRememberKeyFiles": "No recordar",
   "setGenRememberKeyFilesData": "Guardar en el almacenamiento interno",
-  "setGenRememberKeyFilesPath": "Recordar sólo la ruta de archivos llave",
+  "setGenRememberKeyFilesPath": "Recordar solo la ruta de archivos llave",
   "setGenLockInactive": "Si la aplicación está inactiva",
   "setGenNoAutoLock": "No bloquear automáticamente",
   "setGenLockMinutes": "En {} minutos",
@@ -455,7 +455,7 @@
   "setGenTryBetaWarningBody": "Por favor, guarda todos los archivos y vuelve a hacer clic sobre este botón",
   "setGenShowAppLogs": "Mostrar registros de la aplicación",
   "setGenReloadApp": "Recargar la aplicación",
-  "setGenFieldLabelDblClickAutoType": "Autocompleta al hacer doble clic sobre las etiquetas de los campos",
+  "setGenFieldLabelDblClickAutoType": "Autocompletar al hacer doble clic sobre las etiquetas de los campos",
   "setFilePath": "Ruta de archivo",
   "setFileStorage": "Este archivo se ha cargado desde {}.",
   "setFileIntl": "Este archivo está almacenado dentro de la aplicación.",
@@ -493,11 +493,11 @@
   "setFileBackupPath": "Ruta de copias de respaldo",
   "setFileBackupTime": "Crear copias de respaldo",
   "setFileBackupNow": "Respaldar ahora",
-  "setFileBackupNowWorking": "Trabajando ...",
+  "setFileBackupNowWorking": "Trabajando...",
   "setFileBackupError": "Fallo al respaldar",
   "setFileBackupErrorDescription": "Fallo al guardar la copia de respaldo",
   "setFileBackupErrorIsDir": "Ruta de copia de respaldo inválida",
-  "setFileBackupErrorIsDirDescription": "La ruta de la copia de respaldo parece apuntar a una carpeta. Por favor, cambia la ruta a un nombre de fichero dentro de una carpeta.",
+  "setFileBackupErrorIsDirDescription": "La ruta de la copia de respaldo parece apuntar a una carpeta. Por favor, cambia la ruta a un nombre de archivo dentro de una carpeta.",
   "setFileBackupOnSave": "Cada vez que guardo el archivo",
   "setFileBackupDaily": "Diario",
   "setFileBackupWeekly": "Semanal",
@@ -578,7 +578,7 @@
   "setPlLoadTime": "ha tardado {} en cargar",
   "setPlLastUpdate": "Última vez comprobado",
   "setPlLoadError": "fallo al cargar complemento",
-  "setPlGalleryLoading": "Cargando complementos, por favor, espera unos momentos",
+  "setPlGalleryLoading": "Cargando complementos, por favor, espera un momento",
   "setPlGalleryLoadError": "Fallo al cargar complementos",
   "setPlInstallUrlTitle": "Añadir complemento desde URL",
   "setPlInstallUrlDesc": "Si el complemento no está en la galería, puedes instalarlo manualmente desde una URL",
@@ -606,14 +606,14 @@
   "setDevicesYubiKeyOtpAutoOpen": "Cargar automáticamente los códigos de un solo uso cuando haya archivos abiertos",
   "setDevicesYubiKeyOtpMatchEntries": "Mostrar códigos de un solo uso coincidentes en las entradas",
   "setDevicesYubiKeyChalRespTitle": "Reto-Respuesta",
-  "setDevicesYubiKeyChalRespDesc": "También se puede usar una YubiKey en modo reto-respuesta para que un fragmento de la clave privada usada para cifrar los archivos resida en la YubiKey.",
+  "setDevicesYubiKeyChalRespDesc": "También se puede usar una YubiKey en modo reto-respuesta para que el fragmento de la clave privada usado para cifrar los archivos resida en la YubiKey.",
   "setDevicesYubiKeyChalRespShow": "Mostrar la opción para usar una YubiKey al cargar los archivos",
-  "setDevicesYubiKeyStuckWorkaround": "Vuelve a conectar la YubiKey si parece haberse quedado bloqueada en el proceso de carga",
+  "setDevicesYubiKeyStuckWorkaround": "Volver a conectar la YubiKey si parece haberse quedado bloqueada en el proceso de carga",
   "setDevicesYubiKeyRememberChalResp": "Recordar el reto-respuesta mientras la aplicación esté abierta",
   "setAboutTitle": "Acerca de",
   "setAboutBuilt": "Esta aplicación está hecha con estas magníficas utilidades",
   "setAboutLic": "Licencia",
-  "setAboutLicComment": "La aplicación en si y todos los complementos incluidos que no son de dominio público están autorizados bajo la licencia MIT.",
+  "setAboutLicComment": "La aplicación en sí misma y todos los complementos incluidos que no son de dominio público están autorizados bajo la licencia MIT.",
   "setAboutFirst": "Esta es una aplicación open-source creada por {}",
   "setAboutSecond": "y licenciada bajo {}.",
   "setAboutSource": "El código fuente e incidencias están en {}.",
@@ -646,7 +646,7 @@
   "dropboxLinkCustom": "Aplicación Dropbox propia",
   "gdriveSharedWithMe": "Compartido conmigo",
   "webdavSaveMethod": "Modo de guardado",
-  "webdavSaveMove": "Transferir un archivo temporal y mover",
+  "webdavSaveMove": "Subir un archivo temporal y mover",
   "webdavSavePut": "Sobreescribir archivo kdbx con PUT",
   "launcherSave": "Guardar base de datos de contraseñas",
   "launcherFileFilter": "Archivos KeePass",
