--- a/docs/translations/ja/ja.json
+++ b/docs/translations/ja/ja.json
@@ -54,7 +54,7 @@
   "website": "ウェブサイト",
   "tags": "タグ",
   "notes": "ノート",
-  "entry": "登録事項",
+  "entry": "エントリー",
   "group": "グループ",
   "noTitle": "無題",
   "or": "または",
@@ -71,8 +71,10 @@
   "ctrlKey": "ctrl",
   "shiftKey": "shift",
   "altKey": "alt",
+  "error": "エラー",
   "cache": "キャッシュ",
   "file": "ファイル",
+  "device": "デバイス",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -82,6 +84,7 @@
   "menuTrash": "ゴミ箱",
   "menuSetGeneral": "一般",
   "menuSetAbout": "概要",
+  "menuSetDevices": "デバイス",
   "menuAlertNoTags": "タグ無し",
   "menuAlertNoTagsBody": "編集中のフィールドに新しいタグをタグ項目で追加できます",
   "menuEmptyTrash": "ゴミ箱を空にする",
@@ -107,9 +110,9 @@
   "genNewPass": "パスワード",
   "genPresetDefault": "既定のプリセット",
   "genPresetDerived": "以前のパスワードのように",
-  "genPresetPronounceable": "pronounceable",
-  "genPresetMed": "中ぐらいの長さ",
-  "genPresetLong": "長い",
+  "genPresetPronounceable": "短いパスワード",
+  "genPresetMed": "普通のパスワード",
+  "genPresetLong": "長いパスワード",
   "genPresetPin4": "4桁の暗証番号",
   "genPresetMac": "MACアドレス",
   "genPresetHash128": "128-bit hash",
@@ -117,20 +120,20 @@
   "genHidePass": "パスワードを隠す",
   "genShowPass": "パスワードを表示する",
   "grpTitle": "グループ",
-  "grpSearch": "このグループの登録項目の検索を有効にする",
+  "grpSearch": "このグループ内でのエントリーの検索を有効にする",
   "grpAutoType": "自動入力を有効にする",
-  "grpAutoTypeSeq": "自動入力する配列",
-  "grpAutoTypeSeqDefault": "自動入力で既定の配列を使用する",
-  "grpTrash": "このグループの登録項目をすべて削除する",
+  "grpAutoTypeSeq": "自動入力する項目の順序",
+  "grpAutoTypeSeqDefault": "自動入力で既定の順序を使用する",
+  "grpTrash": "このグループのエントリーをすべて削除する",
   "tagTitle": "タグ",
-  "tagTrash": "すべての登録項目からタグを除去する",
+  "tagTrash": "すべてのエントリーからタグを除去する",
   "tagRename": "名前の変更",
-  "tagTrashQuestion": "すべての登録項目からタグを除去しますか？",
-  "tagTrashQuestionBody": "このタグをすべての登録項目から除去します。容易に元に戻すことはできなくなります。",
+  "tagTrashQuestion": "すべてのエントリーからタグを除去しますか？",
+  "tagTrashQuestionBody": "このタグをすべてのエントリーから除去します。容易に元に戻すことはできなくなります。",
   "tagExists": "すでにタグが存在します",
   "tagExistsBody": "この名前のタグはすでに存在します。別の名前にしてください。",
   "tagBadName": "不適当な名前",
-  "tagBadNameBody": "タグ名に {} は使えません。取り除いてください。",
+  "tagBadNameBody": "タグ名に {} は使用できません。他の文字に置き換えてください。",
   "genPsTitle": "パスワード生成のプリセット",
   "genPsCreate": "新しいプリセット",
   "genPsDelete": "プリセットを削除",
@@ -145,10 +148,12 @@
   "genPsBrackets": "括弧",
   "genPsHigh": "拡張ASCII文字",
   "genPsAmbiguous": "見分けにくい文字記号",
-  "genPsInclude": "以上に追加して含める記号",
+  "genPsInclude": "その他に追加する記号",
   "genPsExample": "生成されるパスワードの例",
   "genPsPattern": "パターン",
-  "genPsPatternHelp": "パターンは、文字を選択するためのカスタムルールを指定するために使用することができます。例えば、「1-AA」は数字で始まり、ダッシュと2文字で始まるパスワードを生成します。これらの記号を使用することができます",
+  "genPsPatternHelp": "パターンでは、文字を指定できるカスタムルールを使用することができます。例えば、「1-AA」であれば数字で始まり、ダッシュ記号、アルファベット2文字のパスワードが生成されます。以下の記号を使用することができます。",
+  "genPsAllRanges": "全ての記号",
+  "genPsIncluded": "上記で追加された記号",
   "keyChangeTitleRemote": "マスターキーが変更されました",
   "keyChangeMessageRemote": "このデータベースのマスターキーは変更されました。新しいキーを入力してください",
   "keyChangeTitleExpired": "マスターキーが期限切れです",
@@ -197,21 +202,21 @@
   "openKeyFile": "キーファイル",
   "openKeyFileDropbox": "（Dropboxから）",
   "openDropHere": "ここにファイルをドロップ",
-  "openFailedRead": "ファイルを読むことに失敗しました",
-  "openNothingFound": "見つかりません",
+  "openFailedRead": "ファイルを読み込みに失敗しました",
+  "openNothingFound": "見つかりませんでした",
   "openNothingFoundBody": "適切なファイルが見つかりませんでした。",
   "openSelectFile": "ファイルを選択",
   "openSelectFileBody": "開きたいファイルを選んでください",
-  "openPassFor": "のパスワード",
+  "openPassFor": "パスワード",
   "openRemoveLastQuestion": "ローカルファイルを削除しますか？",
-  "openRemoveLastQuestionBody": "削除しようとしているファイルはこのアプリの中だけに記憶されています。二度と復元できないように削除しますか？",
+  "openRemoveLastQuestionBody": "削除しようとしているファイルはこのアプリ内だけに保存されています。完全に削除しますか？",
   "openRemoveLastQuestionModBody": "削除しようとしているファイルには変更した箇所があります。その変更を破棄して削除しますか？",
   "openLocalFile": "ローカルファイル",
   "openLocalFileBody": "アプリ内部に格納されているファイルを開こうとしています。変更はファイルシステムに保存されません。ファイルを取得するには、設定からエクスポートしてください。",
   "openLocalFileDontShow": "再度 表示しない",
   "openWrongFile": "不良ファイル",
   "openWrongFileBody": "このファイル形式はサポートされていません。このアプリはKeePassデータベース形式ファイル（kdbx）で動作します。",
-  "openKdbFileBody": "古いバージョンの形式ファイル（KDB）を開こうとしています。このアプリは新しい形式（kdbx）のみサポートしています。KeePass ｖ２で変換してからご利用ください。",
+  "openKdbFileBody": "古いバージョンの形式ファイル（KDB）を開こうとしています。このアプリは新しい形式（kdbx）のみサポートしています。KeePass v2 で変換してからご利用ください。",
   "openConfigHeader": "{} 設定",
   "openUrl": "URL",
   "openUrlDesc": "https://server/path/file.kdbx または file.kdbx",
@@ -222,13 +227,18 @@
   "openPassDesc": "WebDAVサーバーのパスワード（ファイルのパスワードではありません）",
   "openPassPlaceholder": "パスワードがありません",
   "openConfigError": "エラー: {}",
-  "openConfigErrorNotFound": "ファイルが見つかりません",
+  "openConfigErrorNotFound": "ファイルが見つかりませんでした",
   "openError": "エラー",
   "openErrorDescription": "ファイルを開くときにエラーが発生しました",
-  "openErrorFileNotFound": "ファイルが見つかりません",
+  "openErrorFileNotFound": "ファイルが見つかりませんでした",
   "openListErrorBody": "ファイルを開くときにエラーが発生しました",
   "openShowAllFiles": "全ファイルを表示",
-  "openFileNoCacheError": "キャッシュストレージにファイルが見つかりません。 これは、ブラウザのストレージがクリーンアップされたために発生する可能性があります。 ファイルを開くには、KeeWebから削除して再度追加してください。",
+  "openFileNoCacheError": "キャッシュストレージ内のファイルが見つかりませんでした。これはブラウザーのストレージがクリーンアップされた際に発生する場合があります。ファイルを開くには、KeeWebから削除して、もう一度追加してください。",
+  "openChalRespHeader": "チャレンジレスポンス認証",
+  "openChalRespLoading": "YubiKey一覧を読み込んでいます",
+  "openChalRespSelectYubiKey": "使用したいYubiKeyを選択してください",
+  "openChalRespErrorEmpty": "YubiKeyが見つかりませんでした。",
+  "openChalRespErrorEmptyMac": "macOSでこの機能を使用するのは初めてですか？ セキュリティ設定内の入力監視の項目に KeeWeb を追加してください。",
   "detAttDownload": "Shift+添付ファイルボタンでダウンロード、または",
   "detAttDelToRemove": "Deleteで削除",
   "detAttSave": "として保存",
@@ -268,23 +278,24 @@
   "detAttachments": "添付ファイル",
   "detDelFromTrash": "ゴミ箱から削除しますか？",
   "detDelFromTrashBody": "元に戻すことはできなくなります。",
-  "detDelFromTrashBodyHint": "ごみ箱の中味をすばやく除去するには、ごみ箱メニューの空アイコンをクリックします。",
+  "detDelFromTrashBodyHint": "すぐにごみ箱の空にするには、メニューからごみ箱開き、空にするアイコンをクリックしてください。",
   "detDelToTrash": "エントリーを削除しますか？",
-  "detDelToTrashBody": "この項目はごみ箱フォルダに移動されます。",
+  "detDelToTrashBody": "このエントリーはごみ箱フォルダに移動されます。",
   "detFieldCopied": "コピーしました",
   "detFieldCopiedTime": "{}秒間コピー",
-  "detCopyHint": "フィールドの題名をクリックすることで値をコピーできます",
-  "detMore": "もっと表示する",
+  "detCopyHint": "フィールドの題名をクリックすると、値がコピーされます",
+  "detMore": "その他...",
   "detClickToAddField": "クリックして新しいフィールドを追加する",
   "detMenuAddNewField": "新しいフィールドを追加する",
   "detMenuShowEmpty": "空のフィールドを表示する",
-  "detMenuHideEmpty": "空のフィールドを隠す",
+  "detMenuHideEmpty": "空のフィールドを非表示にする",
   "detMenuAddField": "{}を追加する",
   "detMenuCopyPassword": "パスワードをコピーする",
   "detMenuCopyUser": "ユーザーをコピーする",
+  "detMenuCopyOtp": "ワンタイムパスワードをコピー",
   "detSetupOtp": "ワンタイムパスワード",
   "detClone": "コピーを作成する",
-  "detCopyEntryToClipboard": "すべてのフィールドをコピーします",
+  "detCopyEntryToClipboard": "すべてのフィールドをコピー",
   "detClonedName": "コピー",
   "detAutoType": "自動入力",
   "detAutoTypeSettings": "自動入力の設定",
@@ -312,12 +323,16 @@
   "detOtpQrErrorBody": "申し訳ありませんが、QRコードを読み取れませんでした。もう一度お試しいただくか、アプリの開発者にエラーの詳細をご連絡ください。",
   "detOtpQrWrong": "不正なQRコード",
   "detOtpQrWrongBody": "QRコードの読み取りは成功しましたが、ワンタイムパスワードが含まれていませんでした。",
+  "detOtpField": "ワンタイムパスワード",
+  "detOtpClickToTouch": "クリックして生成",
+  "detOtpGenerating": "生成中...",
+  "detOtpTouch": "{} にタッチしてください",
   "detLockField": "このフィールドをロックすると、内容が検索の対象外となり表示もされません。内容を表示するには明示的にクリックすることが必要となります。",
   "detUnlockField": "このフィールドをアンロックすると、直ちに内容が検索の対象となり表示もされます。",
   "detRevealField": "表示",
   "detHideField": "隠す",
   "detAutoTypeField": "自動入力",
-  "autoTypeEntryFields": "入力フィールド",
+  "autoTypeEntryFields": "エントリー内のフィールド",
   "autoTypeModifiers": "修飾キー",
   "autoTypeKeys": "キー",
   "autoTypeLink": "その他...",
@@ -355,6 +370,7 @@
   "appRightsAlert": "KeeWebアプリをロックする",
   "appRightsAlertBody1": "KeeWebアプリは現在、未承認の変更から保護されていません。 アプリを管理者のみが書き込み可能にする権限を求めています。",
   "appRightsAlertBody2": "許可を与えたくありませんか? ターミナルで自分で行うこともできます。",
+  "appBrowserAuthComplete": "認証が完了しました。このタブはもう閉じてくださって構いません。",
   "setGenTitle": "一般の設定",
   "setGenUpdate": "更新",
   "setGenNewVersion": "新しいバージョンのアプリがリリースされダウンロード済みです",
@@ -402,10 +418,11 @@
   "setGenShowSubgroups": "すべてのサブグループからエントリーを表示する",
   "setGenTableView": "エントリーをテーブル表示する",
   "setGenColorfulIcons": "リスト中で色付きのカスタムアイコンを使用する",
-  "setGenDirectAutotype": "一致するエントリが1つだけ見つかった場合は、Autotypeでそのエントリを自動的に選択します",
+  "setGenUseMarkdown": "ノート内でMarkdownを有効にする",
+  "setGenDirectAutotype": "一致するエントリーが一つだけの場合、自動入力でそのエントリーを使用する",
   "setGenFunction": "機能",
   "setGenAutoSyncOnClose": "閉じるときに自動で保存と同期を行う",
-  "setGenAutoSyncTimer": "周期的に自動保存と同期を行う",
+  "setGenAutoSyncTimer": "定期的に自動で保存と同期を行う",
   "setGenAutoSyncTimerOff": "無効",
   "setGenAutoSyncTimerInterval": "{}分おき",
   "setGenRememberKeyFiles": "キーファイルを記憶",
@@ -436,7 +453,8 @@
   "setGenTryBetaWarning": "未保存のファイル",
   "setGenTryBetaWarningBody": "すべてのファイルを保存してもう一度このボタンをクリックしてください",
   "setGenShowAppLogs": "アプリのログを表示する",
-  "setGenReloadApp": "アプリを更新する",
+  "setGenReloadApp": "アプリを再読み込みする",
+  "setGenFieldLabelDblClickAutoType": "フィールドの題名をダブルクリックで自動入力する",
   "setFilePath": "ファイルパス",
   "setFileStorage": "{}からファイルをロードしました。",
   "setFileIntl": "このファイルはアプリ内部のストレージに格納されています",
@@ -463,6 +481,7 @@
   "setFileNames": "名前",
   "setFileDefUser": "デフォルトのユーザー",
   "setFileEnableTrash": "ゴミ箱を有効にする",
+  "setFileHistMode": "エントリーの履歴",
   "setFileHistLimited": "古い履歴を自動で削除します",
   "setFileHistDisabled": "履歴を記録しません",
   "setFileHistUnlimited": "履歴をいつまでも残します",
@@ -505,10 +524,20 @@
   "setFileCloseNoSave": "変更を破棄して閉じる",
   "setFileDontClose": "閉じない",
   "setFileFormatVersion": "ファイルフォーマット",
+  "setFileExportRaw": "パスワードのエクスポート",
+  "setFileExportRawBody": "エクスポートされたファイルは暗号化されていないパスワードが保存されます。継続してもよろしいですか？",
+  "setFileDeviceIntro": "この{}からのワンタイムパスワードはこのアプリ内に表示されます。",
+  "setFileDeviceSettings": "設定",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "YubiKeyを使用しない",
+  "setFileRefreshYubiKeyList": "このリストをリフレッシュ",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileYubiKeyBody": "マスターキーの一部としてYubiKeyを使用することは危険です。また、最悪の場合パスワードを失う可能性があります。この設定に変更する前にファイルのバックアップを作成することを強く推奨します。",
+  "setFileYubiKeyErrorEmptyMac": "YubiKeyが接続されているようですが、表示されません。YukibiKeyと接続するには、セキュリティ設定の入力監視にKeeWebを追加してください。",
   "setShTitle": "ショートカット",
   "setShShowAll": "すべての項目を表示する",
   "setShColors": "色付きの項目を表示する",
-  "setShTrash": "ゴミ箱に移動する",
+  "setShTrash": "ごみ箱に移動する",
   "setShFind": "検索",
   "setShClearSearch": "検索をクリア",
   "setShCopyPass": "パスワードまたは選択したフィールドをコピーする",
@@ -523,11 +552,11 @@
   "setShGen": "パスワードを生成する",
   "setShSet": "アプリの設定",
   "setShCopyPassGlobal": "パスワードをコピーする",
-  "setShCopyOtp": "OTPをコピーする",
+  "setShCopyOtp": "ワンタイムパスワードをコピー",
   "setShAutoTypeGlobal": "自動入力を実行する",
   "setShCopyPassOnly": "パスワードをコピーする",
   "setShRestoreApp": "開く{}",
-  "setShGlobal": "これらのシステム全体のショートカットは、アプリがバックグラウンドで実行されているときに機能します。 それらをクリックして、独自のショートカットを選択できます",
+  "setShGlobal": "これらシステム全体のショートカットはバックグラウンド中でも動作します。クリックすることで好きなショートカットに変更することができます。",
   "setShLock": "データベースをロックする",
   "setShEdit": "新しいキーの組み合わせを押して、ショートカットとして設定します",
   "setPlInstallTitle": "新しいプラグインのインストール",
@@ -560,6 +589,26 @@
   "setPlTranslateLink": "あなたの利用する言語向けにアプリを翻訳",
   "setPlAutoUpdate": "自動で更新する",
   "setPlLoadGallery": "プラグインギャラリーをロード",
+  "setDevicesTitle": "デバイス",
+  "setDevicesEnableUsb": "USBデバイスとの接続を有効にする",
+  "setDevicesYubiKeyIntro": "YubiKeyを使用する前に{}を読むことを推奨します。",
+  "setDevicesYubiKeyIntroLink": "このドキュメント",
+  "setDevicesYubiKeyToolsDesc": "このモードでYubiKeyを使用するには、{}というツールをインストールする必要があります。",
+  "setDevicesYubiKeyToolsDesc2": "このツールについては{}をご覧ください。",
+  "setDevicesYubiKeyToolsDescLink": "こちら",
+  "setDevicesYubiKeyToolsStatusChecking": "{}がインストールされているか確認中",
+  "setDevicesYubiKeyToolsStatusOk": "{}がインストールされています",
+  "setDevicesYubiKeyToolsStatusError": "{}がインストールされていないか、動作していません",
+  "setDevicesYubiKeyOtpTitle": "ワンタイムパスワード",
+  "setDevicesYubiKeyOtpDesc": "YubiKeyを使用して、様々なサービスのワンタイムパスワードを生成することができます。",
+  "setDevicesYubiKeyOtpShowIcon": "起動画面にアイコンを表示する",
+  "setDevicesYubiKeyOtpAutoOpen": "ファイルが開かれたときに自動でワンタイムパスワードを読み込む",
+  "setDevicesYubiKeyOtpMatchEntries": "エントリー内に一致するワンタイムパスワードを表示する",
+  "setDevicesYubiKeyChalRespTitle": "チャレンジレスポンス認証",
+  "setDevicesYubiKeyChalRespDesc": "YubiKeyをチャレンジレスポンス認証モードで使用し、ファイルの暗号化に使用する秘密鍵をYubiKeyに保管しておくことができます。",
+  "setDevicesYubiKeyChalRespShow": "ファイルが開くときに、YubiKeyを使用するオプションを表示する",
+  "setDevicesYubiKeyStuckWorkaround": "YubiKeyが読み込み中に問題が発生した場合、再接続する。",
+  "setDevicesYubiKeyRememberChalResp": "アプリが開かれている間はチャレンジレスポンス認証を記憶する",
   "setAboutTitle": "概要",
   "setAboutBuilt": "このアプリはこれらの素晴らしいツールを使用して作成されています",
   "setAboutLic": "ライセンス",
@@ -583,6 +632,9 @@
   "dropboxSetupDesc": "セルフホストアプリケーションでDropboxを使用するには、いくつかの設定が必要です。 独自のDropboxアプリを作成して、下のキーに入力してください。",
   "dropboxAppKey": "Dropbox app key",
   "dropboxAppKeyDesc": "Dropboxアプリからキーをコピーする（Developer settings）",
+  "dropboxAppKeyHint": "あなたのapp key",
+  "dropboxAppSecret": "Dropbox app secret",
+  "dropboxAppSecretDesc": "app secretはapp keyの次に記載されているはずです。",
   "dropboxFolder": "アプリフォルダ",
   "dropboxFolderDesc": "もしアプリがDropboxの(アプリフォルダではなく)全体とリンクされているなら、kbdxファイルが存在するフォルダをここに設定してください",
   "dropboxFolderSettingsDesc": "ファイルを格納するDrobox内のフォルダを選択 (デフォルトではルートフォルダ)",
@@ -601,12 +653,20 @@
   "authPopupRequiredBody": "ブラウザの設定でポップアップを許可してから再度お試しください。",
   "exportFileInfo": "ファイル情報",
   "exportHtmlName": "名前",
-  "exportHtmlDate": "出力データ",
+  "exportHtmlDate": "エクスポートされた日付",
   "exportGenerator": "ソフトウェア",
   "exportDescription": "このファイルは{}で生成されます",
   "importCsvTitle": "CSVをインポート",
   "importCsvRun": "インポート",
   "importIgnoreField": "無視する",
   "importTo": "エントリーは既にインポートされています",
-  "importNewFile": "ファイルを新規作成する"
+  "importNewFile": "ファイルを新規作成する",
+  "yubiKeyStuckError": "YubiKeyに問題が発生しています。設定から自動修正を有効化することができます。",
+  "yubiKeyNoKeyHeader": "YubiKeyが必要",
+  "yubiKeyNoKeyBody": "シリアル番号{}のYubiKeyを挿入してください",
+  "yubiKeySlot": "スロット",
+  "yubiKeyTouchRequestedHeader": "YubiKeyをタッチ",
+  "yubiKeyTouchRequestedBody": "シリアル番号{}のYubiKeyにタップしてください",
+  "yubiKeyDisabledErrorHeader": "USBが無効です",
+  "yubiKeyDisabledErrorBody": "このファイルを開くにはYubiKeyが必要です。設定からUSBデバイスを有効化してください。"
 }
