--- a/docs/translations/pt-BR/pt-BR.json
+++ b/docs/translations/pt-BR/pt-BR.json
@@ -320,6 +320,9 @@
   "detOtpQrErrorBody": "Lamentamos, mas não conseguimos ler o código QR, tente novamente ou contacte os autores da aplicação com os detalhes do erro.",
   "detOtpQrWrong": "Código QR errado",
   "detOtpQrWrongBody": "Seu código QR foi digitalizado com êxito, mas não contém dados de senha únicos.",
+  "detOtpClickToTouch": "Clique para gerar",
+  "detOtpGenerating": "Gerando...",
+  "detOtpTouch": "Toque em seu {}",
   "detLockField": "Bloquear esse arquivo, assim o conteúdo não poderá ser procurado ou estará visível. Para mostrar o conteúdo será necessário obrigatoriamente clicar.",
   "detUnlockField": "Desbloquear este campo, fazendo seu conteúdo pesquisável e visível imediatamente",
   "detRevealField": "Mostrar",
@@ -362,6 +365,7 @@
   "appRightsAlert": "Bloqueando KeeWeb",
   "appRightsAlertBody1": "Seu KeeWeb não está seguro contra mudanças não autorizadas. Nós estamos pedindo sua permissão para que o app seja alterado somente para administradores.",
   "appRightsAlertBody2": "Não quer dar permissão? Você pode fazer no Terminal",
+  "appBrowserAuthComplete": "Autenticação finalizada, você pode fechar esta aba agora.",
   "setGenTitle": "Configurações Gerais",
   "setGenUpdate": "Atualizar",
   "setGenNewVersion": "A nova versão do aplicativo foi lançada e baixada",
@@ -435,6 +439,7 @@
   "setGenLockAutoType": "Auto bloquear ao auto-teclar",
   "setGenLockOrSleep": "Quando o computador estiver bloqueado ou for hibernado",
   "setGenStorage": "Armazenamento",
+  "setGenStorageLogout": "Sair",
   "setGenShowAdvanced": "Mostrar configurações avançadas",
   "setGenDevTools": "Mostar ferramenta para desenvolvedores",
   "setGenTryBeta": "Experimente a versão beta até reiniciar",
@@ -468,6 +473,9 @@
   "setFileNames": "Nomes",
   "setFileDefUser": "Usuário padrão",
   "setFileEnableTrash": "Ativar lixeira",
+  "setFileHistMode": "Histórico de entradas",
+  "setFileHistDisabled": "Não salvar histórico",
+  "setFileHistUnlimited": "Manter informações do histórico para sempre",
   "setFileHistLen": "Quantidade do histórico, mantenha os últimos registros por entrada",
   "setFileHistSize": "Tamanho do histórico, MB totais por arquivo",
   "setFileBackups": "Backups",
@@ -506,6 +514,10 @@
   "setFileCloseNoSave": "Fechar e perder mudanças",
   "setFileDontClose": "Não fechar",
   "setFileFormatVersion": "Formato de arquivo",
+  "setFileExportRaw": "Exportando suas senhas",
+  "setFileExportRawBody": "O arquivo exportado irá conter suas senhas, lá elas não serão criptografadas. Deseja prosseguir?",
+  "setFileDeviceSettings": "Configurações",
+  "setFileRefreshYubiKeyList": "Atualizar a lista",
   "setShTitle": "Atalhos",
   "setShShowAll": "Mostra todos os itens",
   "setShColors": "Mostra itens com cores",
@@ -559,6 +571,12 @@
   "setPlTranslateLink": "traduzir o aplicativo para sua linguagem",
   "setPlAutoUpdate": "Atualizar automaticamente",
   "setPlLoadGallery": "Carregar a galeria de plugins",
+  "setDevicesTitle": "Dispositivos",
+  "setDevicesEnableUsb": "Habilitar interação com dispositivos USB",
+  "setDevicesYubiKeyToolsDescLink": "Clique aqui",
+  "setDevicesYubiKeyToolsStatusChecking": "Checando se {} está instalado",
+  "setDevicesYubiKeyToolsStatusOk": "{} está instalado",
+  "setDevicesYubiKeyOtpShowIcon": "Mostrar ícone na tela inicial",
   "setAboutTitle": "Sobre",
   "setAboutBuilt": "Este aplicativo foi criado com essas ferramentas incríveis",
   "setAboutLic": "Licença",
