--- a/docs/translations/sk/sk.json
+++ b/docs/translations/sk/sk.json
@@ -71,8 +71,10 @@
   "ctrlKey": "ctrl",
   "shiftKey": "shift",
   "altKey": "alt",
+  "error": "chyba",
   "cache": "cache",
   "file": "súbor",
+  "device": "zariadenie",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -82,6 +84,7 @@
   "menuTrash": "Kôš",
   "menuSetGeneral": "Všeobecné",
   "menuSetAbout": "O aplikácii",
+  "menuSetDevices": "Zariadenia",
   "menuAlertNoTags": "Bez štítkov",
   "menuAlertNoTagsBody": "Môžete pridať nové štítky počas editácie polí v sekcii Štítky",
   "menuEmptyTrash": "Vyprázdniť kôš",
@@ -231,6 +234,11 @@
   "openListErrorBody": "Chyba čítania zoznamu súborov",
   "openShowAllFiles": "Zobraziť všetky súbory",
   "openFileNoCacheError": "Súbor nenájdený v cache úložisku. Toto môže nastať ak je vyčistené úložisko prehliadača. Odstránte súbor z KeeWeb a pridajte ho znovu.",
+  "openChalRespHeader": "Challenge-Response",
+  "openChalRespLoading": "Načítavanie zoznamu YubiKeys",
+  "openChalRespSelectYubiKey": "Vyberte YubiKey, ktorý chete použiť",
+  "openChalRespErrorEmpty": "YubiKeys neboli nájdené.",
+  "openChalRespErrorEmptyMac": "Prvýkrát používate túto funkciu v macOS? KeeWeb musí byť pridaný do Input Monitoringu v sekcii nastavenia bezpečnosti.",
   "detAttDownload": "Stiahnuť pomocou shift-klik na tlačidlo prílohy alebo",
   "detAttDelToRemove": "Zmazať",
   "detAttSave": "Uložiť ako ...",
@@ -275,7 +283,7 @@
   "detDelToTrashBody": "Záznam bude presunutý do adresára kôš.",
   "detFieldCopied": "Skopírované",
   "detFieldCopiedTime": "Skopírované na {} sekúnd",
-  "detCopyHint": "Kliknutím na názov poľa skopírujete hodnotu",
+  "detCopyHint": "Kliknutím na názov poľa skopírujete jeho hodnotu",
   "detMore": "viac",
   "detClickToAddField": "kliknite na pridanie nového poľa",
   "detMenuAddNewField": "Pridať nové pole",
@@ -284,7 +292,8 @@
   "detMenuAddField": "Pridať {}",
   "detMenuCopyPassword": "Kopírovať heslo",
   "detMenuCopyUser": "Kopírovať používateľa",
-  "detSetupOtp": "Jednorázové heslá",
+  "detMenuCopyOtp": "Skopírovať jednorázový kód",
+  "detSetupOtp": "Jednorázové kódy",
   "detClone": "Vytvoriť kópiu",
   "detCopyEntryToClipboard": "Kopírovať všetky polia",
   "detClonedName": "Kopírovať",
@@ -313,7 +322,11 @@
   "detOtpQrError": "Chyba skenovania QR kódu",
   "detOtpQrErrorBody": "Je nám ľúto, nemôžeme načítať QR kód, prosím skúste to znovu, alebo kontaktujte tvorcu aplikácie s detailami chyby.",
   "detOtpQrWrong": "Nesprávny QR kód",
-  "detOtpQrWrongBody": "QR kód úspešne naskenovaný, ale neobsahuje dáta jednorázového hesla.",
+  "detOtpQrWrongBody": "QR kód úspešne naskenovaný, ale neobsahuje dáta jednorázového kódu.",
+  "detOtpField": "Jednorázový kód",
+  "detOtpClickToTouch": "Kliknutím vygenerovať",
+  "detOtpGenerating": "Generovanie...",
+  "detOtpTouch": "Dotknite sa svojho {}",
   "detLockField": "Zamknúť toto pole, jeho obsah nebude vyhľadateľný a viditeľný. Zobrazenie obsahu vyžaduje explicitné kliknutie.",
   "detUnlockField": "Odomknúť toto pole, obsah bude vyhľadateľný a viditeľný",
   "detRevealField": "Odhaliť",
@@ -335,7 +348,7 @@
   "autoTypeSelectionHintAction": "Napíšte len heslo",
   "autoTypeSelectionHintOpt": "Napíšte len používateľské meno",
   "autoTypeSelectionHintShift": "Ďalšie polia",
-  "autoTypeSelectionOtp": "Jednorázové heslo",
+  "autoTypeSelectionOtp": "Jednorázový kód",
   "appSecWarn": "Nezabezpečené!",
   "appSecWarnBody1": "Spustili ste aplikáciu s nezabezpečeným pripojením. Niekto môže čítať váš obsah a ukradnúť vaše heslá. Odporúčame prestať, pokiaľ si nebudete istý, čo robíte.",
   "appSecWarnBody2": "Áno, vaša databáza je zakryptovaná, ale nikto negarantuje, že aplikácia nebola cestou k vám zmenená.",
@@ -442,6 +455,7 @@
   "setGenTryBetaWarningBody": "Prosím uložte všetky súbory a kliknite na tlačidlo znovu",
   "setGenShowAppLogs": "Zobraziť logy",
   "setGenReloadApp": "Reštartovať aplikáciu",
+  "setGenFieldLabelDblClickAutoType": "Auto-type dvojitým kliknutím na popis pola",
   "setFilePath": "Cesta k súboru",
   "setFileStorage": "Súbor je načítaný z {}.",
   "setFileIntl": "Súbor je uložený v internom úložisku aplikácie",
@@ -511,6 +525,16 @@
   "setFileCloseNoSave": "Zavrieť a zahodiť zmeny",
   "setFileDontClose": "Nezatvoriť",
   "setFileFormatVersion": "Formát súboru",
+  "setFileExportRaw": "Exportovanie vašich hesiel",
+  "setFileExportRawBody": "Exportovaný súbor bude obsahovať vaše heslá a nebudú enkryptované. Chcete pokračovať?",
+  "setFileDeviceIntro": "Jednorázové kódy z tohto {} budú zobrazené v applikácii.",
+  "setFileDeviceSettings": "Nastavenia",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "Nepoužiť YubiKey",
+  "setFileRefreshYubiKeyList": "Obnoviť zoznam",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileYubiKeyBody": "Používať YubiKey ako súčasť hlavného kľúča je nebezpečné a môžete stratiť prístup k vašim heslám ak sa niečo pokazí. Vykonali ste zálohu súborov pred zmenou týchto nastavení?",
+  "setFileYubiKeyErrorEmptyMac": "Zdá sa, že je vložený YubiKey, ale nie je viditeľný. Pre prístup k YubiKey, KeeWeb musí byť pridaný do Input Monitoringu v sekcii nastavenia bezpečnosti.",
   "setShTitle": "Skratky",
   "setShShowAll": "zobraziť všetky záznamy",
   "setShColors": "zobraziť záznamy s farbou",
@@ -566,6 +590,26 @@
   "setPlTranslateLink": "preložiť aplikáciu do vášho jazyka",
   "setPlAutoUpdate": "Aktualizovať automaticky",
   "setPlLoadGallery": "Načítať galériu doplnkov",
+  "setDevicesTitle": "Zariadenia",
+  "setDevicesEnableUsb": "Povoliť interakciu s USB zariadeniami",
+  "setDevicesYubiKeyIntro": "Je odporúčané prečítať {} pred použitím YubiKey.",
+  "setDevicesYubiKeyIntroLink": "tento dokument",
+  "setDevicesYubiKeyToolsDesc": "Aby bolo možné použiť YubiKey v tomto móde, musíte nainštalovať tool {}.",
+  "setDevicesYubiKeyToolsDesc2": "{} pre získanie viac informácií o tomto toole.",
+  "setDevicesYubiKeyToolsDescLink": "Kliknite",
+  "setDevicesYubiKeyToolsStatusChecking": "Kontrola, či {} je nainštalovaný",
+  "setDevicesYubiKeyToolsStatusOk": "{} je nainštalovaný",
+  "setDevicesYubiKeyToolsStatusError": "{} nie je nainštalovaný alebo nefunguje",
+  "setDevicesYubiKeyOtpTitle": "Jednorázové kódy",
+  "setDevicesYubiKeyOtpDesc": "YubiKey môže byť použitý na vygenerovanie jednorázového kódu pre rôzne služby.",
+  "setDevicesYubiKeyOtpShowIcon": "Zobraziť ikonu na úvodnej obrazovke",
+  "setDevicesYubiKeyOtpAutoOpen": "Automaticky načítať jednorázové kódy ak sú otvorené súbory",
+  "setDevicesYubiKeyOtpMatchEntries": "Zobraziť zhodné jednorázové kódy v záznamoch",
+  "setDevicesYubiKeyChalRespTitle": "Challenge-Response",
+  "setDevicesYubiKeyChalRespDesc": "YubiKey je tiež možné použiť v challenge-response móde tak, že časť privátneho kľúča je použitá na enkryptovanie súborov nachádzajúcich sa v YubiKey.",
+  "setDevicesYubiKeyChalRespShow": "Zobraziť možnosti použitie YubiKey pri otváraní súborov",
+  "setDevicesYubiKeyStuckWorkaround": "Opätovne pripojiť k YubiKey ak sa zasekol počas načítavania",
+  "setDevicesYubiKeyRememberChalResp": "Zapamätať challenge-response kým je aplikácia otvorená",
   "setAboutTitle": "O",
   "setAboutBuilt": "Aplikácia je vytvorená týmito úžasnými nástrojmi",
   "setAboutLic": "Licencia",
@@ -617,5 +661,13 @@
   "importCsvRun": "Import",
   "importIgnoreField": "Ignorovať",
   "importTo": "Záznamy budú importované do",
-  "importNewFile": "Nový súbor"
+  "importNewFile": "Nový súbor",
+  "yubiKeyStuckError": "YubiKey sa zdá byť zaseknutý, automatická oprava môže byť povolená v nastaveniach aplikácie.",
+  "yubiKeyNoKeyHeader": "YubiKey požadovaný",
+  "yubiKeyNoKeyBody": "Prosím, vložte svoj YubiKey so sériovým číslom {}",
+  "yubiKeySlot": "slot",
+  "yubiKeyTouchRequestedHeader": "Dotknite sa svojho YubiKey",
+  "yubiKeyTouchRequestedBody": "Prosím, dotknite sa svojho YubiKey so sériovým číslom {}",
+  "yubiKeyDisabledErrorHeader": "USB je zakázané",
+  "yubiKeyDisabledErrorBody": "YubiKey požaduje otvoriť tento súbor, prosím povoľte USB zariadenia v nastaveniach."
 }
