--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -71,8 +71,10 @@
   "ctrlKey": "ctrl",
   "shiftKey": "shift",
   "altKey": "alt",
+  "error": "помилка",
   "cache": "кеш",
   "file": "файл",
+  "device": "пристрій",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Диск ",
@@ -82,6 +84,7 @@
   "menuTrash": "Смітник",
   "menuSetGeneral": "Загальні",
   "menuSetAbout": "Про програму",
+  "menuSetDevices": "Пристрої",
   "menuAlertNoTags": "Без тегів",
   "menuAlertNoTagsBody": "Ви можете додавати нові теги при редагуванні полів в розділі Теги.",
   "menuEmptyTrash": "Очистити смітник",
@@ -231,6 +234,9 @@
   "openListErrorBody": "Помилка завантаження списку файлів",
   "openShowAllFiles": "Показати всі файли",
   "openFileNoCacheError": "Файл не знайдено в кеші. Це може трапитися, якщо сховище браузера було очищено. Щоб відкрити файл, видаліть його з KeeWeb і додайте заново.",
+  "openChalRespLoading": "Список YubiKey завантажується",
+  "openChalRespSelectYubiKey": "Оберіть YubiKey, який ви бажаєте використовувати",
+  "openChalRespErrorEmpty": "Не знайдено жодного YubiKey",
   "detAttDownload": "Натисніть Shift і клацніть по вкладенню, щоб завантажити його, або",
   "detAttDelToRemove": "Delete для видалення",
   "detAttSave": "Зберегти як ...",
@@ -284,6 +290,7 @@
   "detMenuAddField": "Додати {}",
   "detMenuCopyPassword": "Скопіювати пароль",
   "detMenuCopyUser": "Скопіювати логін",
+  "detMenuCopyOtp": "Скопіювати одноразовий пароль",
   "detSetupOtp": "Одноразовий пароль",
   "detClone": "Зробити копію",
   "detCopyEntryToClipboard": "Скопіювати всі поля",
@@ -314,6 +321,10 @@
   "detOtpQrErrorBody": "На жаль, ми не змогли прочитати QR-код, будь ласка, спробуйте ще раз або зв'яжіться з авторами програми з докладною інформацією про помилки.",
   "detOtpQrWrong": "Невірний QR код",
   "detOtpQrWrongBody": "Ваш QR-код був успішно відсканований, але він не містить даних одноразового пароля.",
+  "detOtpField": "Одноразовий пароль",
+  "detOtpClickToTouch": "Натисніть, щоб згенерувати",
+  "detOtpGenerating": "Генерується...",
+  "detOtpTouch": "Натисніть на ваш {}",
   "detLockField": "Заблокувати поле, його зміст буде зкрито і він не буде відображатися в пошуку. Щоб побачити зміст поля треба буде клікнути по ньому.",
   "detUnlockField": "Розблокувати поле, його зміст стане видимий і він буде відображатися в пошуку.",
   "detRevealField": "Показати",
@@ -511,6 +522,12 @@
   "setFileCloseNoSave": "Закрити і втратити зміни",
   "setFileDontClose": "Не закрывати",
   "setFileFormatVersion": "Формат файлу",
+  "setFileExportRaw": "Експортуючи ваші паролі",
+  "setFileExportRawBody": "Експортований файл буде вміщати ваші паролі, які не будуть зашифровані. Бажаєте продовжити?",
+  "setFileDeviceSettings": "Налаштування",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "Не використовувати YubiKey",
+  "setFileYubiKeyHeader": "YubiKey",
   "setShTitle": "Гарячі клавіші",
   "setShShowAll": "показати усі елементи",
   "setShColors": "показати елементи цього кольору",
@@ -566,6 +583,12 @@
   "setPlTranslateLink": "Перекласти програму на вашу мову",
   "setPlAutoUpdate": "Оновлювати автоматично",
   "setPlLoadGallery": "Завантажити галерею плагінів",
+  "setDevicesYubiKeyIntroLink": "цю статтю",
+  "setDevicesYubiKeyToolsDescLink": "Натисніть тут",
+  "setDevicesYubiKeyToolsStatusChecking": "Перевірка чи {} встановлений",
+  "setDevicesYubiKeyToolsStatusOk": "{} встановлений",
+  "setDevicesYubiKeyToolsStatusError": "{} не встановлений або не працює",
+  "setDevicesYubiKeyOtpTitle": "Одноразові паролі",
   "setAboutTitle": "Про KeeWeb",
   "setAboutBuilt": "Ця програма створена за допомогою цих дивовижних інструментів",
   "setAboutLic": "Ліцензія",
